--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,32 +8,82 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
     <div id="wrap">
         <header>
-            <div class="container"></div>
+            <div class="container">
+                <div class="logo">LOGO</div>
+                <a href="">관람·참여</a>
+                <a href="">통합예약</a>
+                <a href="">전시</a>
+                <a href="">교육</a>
+                <a href="">미술연구</a>
+            </div>
         </header>
         <section>
-            <div class="container"></div>
+            <div class="bg_img"></div>
+            <div class="container">
+                <div class="main_text"></div>
+                <div class="ctrl_wrap"></div>
+            </div>
         </section>
         <div id="artwork">
-            <div class="container"></div>
+            <div class="container">
+                <div class="artwork_more_text">
+                        <h3>SPACE ISU</h3>
+                        <h2>밤의 풍경</h2>
+                        <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다.</p>
+                        <a href="#">view more +</a>
+                </div>
+                <div class="artwork_art_img">
+                    <img src="img/main/lee_top.jpg" alt="">
+                    <div class="art_text">
+                        <h2>밤</h2>
+                        <ul>
+                            <li>ARTIST :이인혜(LEE INHYE)</li>
+                            <li>TYPE :MIXED MEDIA ON ETC</li>
+                            <li>SIZE :220 X 300 CM</li>
+                            <li>FRAMED :NO</li>
+                            <li>YEAR :2005</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id="Berlin">
-            <div class="container"></div>
+            <div class="container">
+                <div class="art_box"></div>
+                <div class="art_box2"></div>
+            </div>
         </div>
-        <div id="artwork_slide">
-            <div class="container"></div>
+        <div id="artwork_bg">
+            <div class="container">
+                <div class="slide_head">
+                    <div class="slide_head_text"></div>
+                    <div class="artwork_bg_img"></div>
+                </div>
+                <div class="artwork_slide"></div>
+            </div>
         </div>
+
         <div id="explanation">
-            <div class="container"></div>
+            <div class="container">
+                <div class="more_imgbox"></div>
+                <div class="news"></div>
+            </div>
         </div>
         <footer>
-            <div class="container"></div>
+            <div class="container">
+                <div class="road"></div>
+                <div class="map"></div>
+                <div class="detail"></div>
+            </div>
         </footer>
     </div>
-    
-    
+
+
 </body>
+
 </html>
