--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="css/main.css">
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
+    <script src="js/main.js"></script>
 </head>
 
 <body>
@@ -32,21 +36,21 @@
         <div id="artwork">
             <div class="container">
                 <div class="artwork_more_text">
-                        <h3>SPACE ISU</h3>
-                        <h2>밤의 풍경</h2>
-                        <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다.</p>
-                        <a href="#">view more +</a>
+                    <h3>SPACE ISU</h3>
+                    <h2>밤의 풍경</h2>
+                    <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다.</p>
+                    <a href="#">view more +</a>
                 </div>
                 <div class="artwork_art_img">
                     <img src="img/main/lee_top.jpg" alt="">
                     <div class="art_text">
                         <h2>밤</h2>
                         <ul>
-                            <li>ARTIST :이인혜(LEE INHYE)</li>
-                            <li>TYPE :MIXED MEDIA ON ETC</li>
-                            <li>SIZE :220 X 300 CM</li>
-                            <li>FRAMED :NO</li>
-                            <li>YEAR :2005</li>
+                            <li>ARTIST : 이인혜(LEE INHYE)</li>
+                            <li>TYPE : MIXED MEDIA ON ETC</li>
+                            <li>SIZE : 220 X 300 CM</li>
+                            <li>FRAMED : NO</li>
+                            <li>YEAR : 2005</li>
                         </ul>
                     </div>
                 </div>
@@ -54,17 +58,100 @@
         </div>
         <div id="Berlin">
             <div class="container">
-                <div class="art_box"></div>
-                <div class="art_box2"></div>
+                <div class="art_box">
+                    <img src="img/main/Berlin.jpg" alt="">
+                    <div class="Berlin_text">
+                        <h2>베를린 여름밤 자정</h2>
+                        <ul>
+                            <li>ARTIST : 이인혜(LEE INHYE)</li>
+                            <li>TYPE : oil on canvas</li>
+                            <li>SIZE : 30 X 24 CM</li>
+                            <li>FRAMED : NO</li>
+                            <li>YEAR : 2012</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="art_box2">
+                    <img src="img/main/Berlin_ri.jpg" alt="">
+                    <div class="Berlin_text_ri">
+                        <h2>베를린 여름밤 자정</h2>
+                        <ul>
+                            <li>ARTIST : 이인혜(LEE INHYE)</li>
+                            <li>TYPE : oil on canvas</li>
+                            <li>SIZE : 30 X 24 CM</li>
+                            <li>FRAMED : NO</li>
+                            <li>YEAR : 2012</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="artwork_bg">
             <div class="container">
                 <div class="slide_head">
-                    <div class="slide_head_text"></div>
-                    <div class="artwork_bg_img"></div>
+                    <div class="slide_head_text">
+                        <h4>작가 이혜인의 시선으로 바라보는</h4>
+                        <h2>다채로운 풍경들</h2>
+                        <span class="prev">&lt;</span><span class="next">&gt;</span>
+                    </div>
+                    <img src="img/main/slide_bacgk.jpg" alt="">
                 </div>
-                <div class="artwork_slide"></div>
+                <div class="artwork_slide">
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider1.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>언제 가장 행복해?</h3>
+                            <p> 사진에 담기지못한 그 날 그 순간에 분위기와 감정, 느낌을 그림에 덧붙이면 기억은 추억이 되고 사소하지만 나를 가득 채우는 감정들이 살아난다.</p>
+                        </div>
+                    </div>
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider2.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>여름이 시작되는 짙은 녹음</h3>
+                            <p> 짙은 녹음사이에 드리워진 그림자를 통해 일상의 따스함을 느낀다</p>
+                        </div>
+                    </div>
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider3.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>커튼 사이</h3>
+                            <p>일상 속에는 많은 색감들이 있고 시간과 계절에 따라 색이 바뀐다. 그 안에서 많은 색감들에 영감을 받고 그 색들로 특별한 일상을 만들어나간다.</p>
+                        </div>
+                    </div>
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider4.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>그날의 기억#2</h3>
+                            <p>내 작업을 일상을 그린 그림들이다. 나의 일상속에서 느낀 머물고 누르고자 하는 나의 마음, 감정, 기억을 색에 담아서 작업한다.</p>
+                        </div>
+                    </div>
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider5.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>LJ</h3>
+                            <p>LJ가 잠드는 순간이 가장 포근하다.</p>
+                        </div>
+                    </div>
+                    <div class="art_slide_box">
+                        <div class="slide_img">
+                            <img src="img/main/slider6.jpeg" alt="">
+                        </div>
+                        <div class="slide_text">
+                            <h3>밤마당2</h3>
+                            <p>밤 마당을 표현해보았다. 우거진 나무들과 나의 강아지가 있다.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
