--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                         <div class="slide_text">
                             <h3>여름이 시작되는 짙은 녹음</h3>
-                            <p> 짙은 녹음사이에 드리워진 그림자를 통해 일상의 따스함을 느낀다</p>
+                            <p> 짙은 녹음사이에 드리워진 그림자를 통해 일상의 따스함을 느낀다.</p>
                         </div>
                     </div>
                     <div class="art_slide_box">
@@ -157,19 +157,52 @@
 
         <div id="explanation">
             <div class="container">
-                <div class="more_imgbox"></div>
-                <div class="news"></div>
+                <div class="more_imgbox">
+                    <img src="img/main/news_main.jpg" alt="">
+                </div>
+                <div class="news">
+                    <div class="news_head">
+                        <h3>보도자료</h3>
+                        <h3>공지사항</h3>
+                    </div>
+                    <div class="news_content">
+                        <img src="img/main/news_right.jpg" alt="">
+                        <div class="news_box">
+                            <h2>베를린에서 바라본 자정의 여름밤..</h2>
+                            <p>"우리의 일상이 주는 안정감은 무엇보다 소중하고 일상 속에서 마주하는 순간들은 특별하지 않으면서도 특별합니다. 일상 속에서 마주하는 포근한 순간들은 가슴을 따뜻하게 합니다.
+                                저는 그런 일상 속 특별한 순간들을 그려 사람들에게 일상 속 아름다움을 얘기하고 싶습니다. 또한, 제 작품이 감상자분들께 따뜻함과 편안함으로 다가가고, 제가 그린 일상이 공감되기를 바라봅니다.
+                                 -이인혜 작가 인터뷰中</p>
+                        </div>
+                    </div>
+                    <div class="news_content_bot">
+                        <img src="img/main/news_bot.jpg" alt="">
+                        <div class="news_box">
+                            <h2>노을빛처럼 무르익는..... </h2>
+                            <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다. 특히 고요해진 밤(Night) 풍경에서 편안함을 느끼는 작가는 친숙하게 봐오던 일상의 풍경들이 밤이 되면 달라지는 것을 보랏빛을 사용하여 몽롱함과 편안함을 표현하고자 하였다. 훤히 비치는 밝은 낮과 달리 밤(Night)에서만 느낄 수 있는 포근함이 근심과 걱정을 밤하늘 속에 묻어두길 바라며..</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <footer>
             <div class="container">
-                <div class="road"></div>
+                <div class="road">
+                    <h2>SPACE ISU</h2><span>오시는 길</span>
+                    <h4>경기도 안산시 단원구 고잔동 535-2번지</h4>
+                    <h4>코스모프라자 6층 전체</h4>
+                    <a href="">문의하기</a><a href="">FQA</a>
+                </div>
                 <div class="map"></div>
-                <div class="detail"></div>
+                <div class="detail">
+                    <ul>
+                        <li>대표자 : 최명윤</li>
+                        <li>문의전화 : 010-2386-2257</li>
+                        <li>사업장 등록번호 : 111-11-11111</li>
+                    </ul>
+                </div>
             </div>
         </footer>
     </div>
-
 
 </body>
 
