--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.6.0.min.js"></script>
     <script src="js/main.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </head>
 
 <body>
@@ -18,12 +21,47 @@
     <div id="wrap">
         <header>
             <div class="container">
-                <div class="logo">LOGO</div>
-                <a href="">관람·참여</a>
-                <a href="">통합예약</a>
-                <a href="">전시</a>
-                <a href="">교육</a>
-                <a href="">미술연구</a>
+                <ul>
+                    <li><a href="" class="logo">SPACE ISU</a></li>
+                    <li><a href="">관람·참여</a>
+                        <ul>
+                            <li><a href="">전시해설</a></li>
+                            <li><a href="">어린이 미술관</a></li>
+                            <li><a href="">이벤트</a></li>
+                            <li><a href="">레지던시</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">통합예약</a>
+                        <ul>
+                            <li><a href="">예약하기</a></li>
+                            <li><a href="">예약내역</a></li>
+                            <li><a href="">예약취소</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">전시</a>
+                        <ul>
+                            <li><a href="#">과거 전시</a></li>
+                            <li><a href="#">현재 전시</a></li>
+                            <li><a href="#">미래 전시</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">교육</a>
+                        <ul>
+                            <li><a href="#">미술관교육소개</a></li>
+                            <li><a href="#">청소년</a></li>
+                            <li><a href="#">성인</a></li>
+                            <li><a href="#">교육자료실</a></li>
+                            <li><a href="#">참여신청</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="">미술연구</a>
+                        <ul>
+                            <li><a href="#">아카이브</a></li>
+                            <li><a href="#">연구</a></li>
+                            <li><a href="#">발간자료</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </header>
         <section>
@@ -35,13 +73,13 @@
         </section>
         <div id="artwork">
             <div class="container">
-                <div class="artwork_more_text">
+                <div class="artwork_more_text" data-aos="fade-right" data-aos-easing="ease-in-sine">
                     <h3>SPACE ISU</h3>
                     <h2>밤의 풍경</h2>
                     <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다.</p>
                     <a href="#">view more +</a>
                 </div>
-                <div class="artwork_art_img">
+                <div class="artwork_art_img" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <img src="img/main/lee_top.jpg" alt="">
                     <div class="art_text">
                         <h2>밤</h2>
@@ -58,7 +96,7 @@
         </div>
         <div id="Berlin">
             <div class="container">
-                <div class="art_box">
+                <div class="art_box" data-aos="fade-up" data-aos-easing="ease-in-sine">
                     <img src="img/main/Berlin.jpg" alt="">
                     <div class="Berlin_text">
                         <h2>베를린 여름밤 자정</h2>
@@ -71,7 +109,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="art_box2">
+                <div class="art_box2" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="2000">
                     <img src="img/main/Berlin_ri.jpg" alt="">
                     <div class="Berlin_text_ri">
                         <h2>베를린 여름밤 자정</h2>
@@ -89,14 +127,14 @@
         <div id="artwork_bg">
             <div class="container">
                 <div class="slide_head">
-                    <div class="slide_head_text">
+                    <div class="slide_head_text" data-aos="fade-up" data-aos-easing="ease-in-sine">
                         <h4>작가 이혜인의 시선으로 바라보는</h4>
                         <h2>다채로운 풍경들</h2>
                         <span class="prev">&lt;</span><span class="next">&gt;</span>
                     </div>
                     <img src="img/main/slide_bacgk.jpg" alt="">
                 </div>
-                <div class="artwork_slide">
+                <div class="artwork_slide" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <div class="art_slide_box">
                         <div class="slide_img">
                             <img src="img/main/slider1.jpeg" alt="">
@@ -157,10 +195,10 @@
 
         <div id="explanation">
             <div class="container">
-                <div class="more_imgbox">
+                <div class="more_imgbox" data-aos="fade-right" data-aos-easing="ease-in-sine">
                     <img src="img/main/news_main.jpg" alt="">
                 </div>
-                <div class="news">
+                <div class="news" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <div class="news_head">
                         <h3>보도자료</h3>
                         <h3>공지사항</h3>
@@ -169,16 +207,20 @@
                         <img src="img/main/news_right.jpg" alt="">
                         <div class="news_box">
                             <h2>베를린에서 바라본 자정의 여름밤..</h2>
-                            <p>"우리의 일상이 주는 안정감은 무엇보다 소중하고 일상 속에서 마주하는 순간들은 특별하지 않으면서도 특별합니다. 일상 속에서 마주하는 포근한 순간들은 가슴을 따뜻하게 합니다.
-                                저는 그런 일상 속 특별한 순간들을 그려 사람들에게 일상 속 아름다움을 얘기하고 싶습니다. 또한, 제 작품이 감상자분들께 따뜻함과 편안함으로 다가가고, 제가 그린 일상이 공감되기를 바라봅니다.
-                                 -이인혜 작가 인터뷰中</p>
+                            <p>"우리의 일상이 주는 안정감은 무엇보다 소중하고 일상 속에서 마주하는 순간들은 특별하지 않으면서도 특별합니다. 일상 속에서 마주하는 포근한 순간들은 가슴을
+                                따뜻하게 합니다.
+                                저는 그런 일상 속 특별한 순간들을 그려 사람들에게 일상 속 아름다움을 얘기하고 싶습니다. 또한, 제 작품이 감상자분들께 따뜻함과 편안함으로 다가가고, 제가
+                                그린 일상이 공감되기를 바라봅니다.
+                                -이인혜 작가 인터뷰中</p>
                         </div>
                     </div>
                     <div class="news_content_bot">
                         <img src="img/main/news_bot.jpg" alt="">
                         <div class="news_box">
                             <h2>노을빛처럼 무르익는..... </h2>
-                            <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다. 특히 고요해진 밤(Night) 풍경에서 편안함을 느끼는 작가는 친숙하게 봐오던 일상의 풍경들이 밤이 되면 달라지는 것을 보랏빛을 사용하여 몽롱함과 편안함을 표현하고자 하였다. 훤히 비치는 밝은 낮과 달리 밤(Night)에서만 느낄 수 있는 포근함이 근심과 걱정을 밤하늘 속에 묻어두길 바라며..</p>
+                            <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다. 특히 고요해진 밤(Night) 풍경에서 편안함을
+                                느끼는 작가는 친숙하게 봐오던 일상의 풍경들이 밤이 되면 달라지는 것을 보랏빛을 사용하여 몽롱함과 편안함을 표현하고자 하였다. 훤히 비치는 밝은 낮과 달리
+                                밤(Night)에서만 느낄 수 있는 포근함이 근심과 걱정을 밤하늘 속에 묻어두길 바라며..</p>
                         </div>
                     </div>
                 </div>
@@ -186,19 +228,25 @@
         </div>
         <footer>
             <div class="container">
-                <div class="road">
+                <div class="road" data-aos="fade-right" data-aos-easing="ease-in-sine">
                     <h2>SPACE ISU</h2><span>오시는 길</span>
                     <h4>경기도 안산시 단원구 고잔동 535-2번지</h4>
-                    <h4>코스모프라자 6층 전체</h4>
+                    <h4>코스모프라자 6층</h4>
                     <a href="">문의하기</a><a href="">FQA</a>
                 </div>
-                <div class="map"></div>
+                <div class="map" data-aos="fade-left" data-aos-easing="ease-in-sine">
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.039881531707!2d126.83160463185054!3d37.3178829816315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b6f1b4de62e49%3A0x5153c99c56766ccf!2z65287J247Lu07ZOo7YSw7JWE7Yq47ZWZ7JuQ!5e0!3m2!1sko!2skr!4v1653024797616!5m2!1sko!2skr"
+                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
                 <div class="detail">
                     <ul>
                         <li>대표자 : 최명윤</li>
                         <li>문의전화 : 010-2386-2257</li>
                         <li>사업장 등록번호 : 111-11-11111</li>
                     </ul>
+                    <p>경기도 안산시 단원구 고잔2길 45(고잔동) 코스모스프라지 6층</p>
                 </div>
             </div>
         </footer>
