--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="wrap">
         <header>
             <div class="container">
-                <ul>
-                    <li><a href="" class="logo">SPACE ISU</a></li>
+                <div class="logo"><a href="">SPACE ISU</a></div>
+                <ul class="left menu">
                     <li><a href="">관람·참여</a>
                         <ul>
                             <li><a href="">전시해설</a></li>
@@ -62,13 +62,35 @@
                         </ul>
                     </li>
                 </ul>
+                <div class="menu"><a href="#" onclick="left_menu()">MENU</a></div>
+                <div class="close"><a href="#" onclick="close()">X</a></div>
             </div>
         </header>
         <section>
             <div class="bg_img"></div>
+            <div class="overlay" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="650"></div>
             <div class="container">
-                <div class="main_text"></div>
-                <div class="ctrl_wrap"></div>
+                <div class="main_text" data-aos="fade-up" data-aos-easing="ease-in-sine">
+                    <table>
+                        <tr>
+                            <td>참여 작가</td>
+                            <td>박세진, 이혜인</td>
+                        </tr>
+                        <tr>
+                            <td>전시 기간</td>
+                            <td>2022.05.11 ~ 2022.07.31</td>
+                        </tr>
+                        <tr>
+                            <td>운영 시간</td>
+                            <td>수요일 - 일요일, 오후 1시 - 6시</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>(매주 월, 화 및 공휴일 휴관)</td>
+                        </tr>
+                    </table>
+                    <a href="#">전시소개</a>
+                </div>
             </div>
         </section>
         <div id="artwork">
@@ -84,7 +106,7 @@
                     <div class="art_text">
                         <h2>밤</h2>
                         <ul>
-                            <li>ARTIST : 이인혜(LEE INHYE)</li>
+                            <li>ARTIST : 박세진(SEJIN PARK)</li>
                             <li>TYPE : MIXED MEDIA ON ETC</li>
                             <li>SIZE : 220 X 300 CM</li>
                             <li>FRAMED : NO</li>
@@ -134,59 +156,61 @@
                     </div>
                     <img src="img/main/slide_bacgk.jpg" alt="">
                 </div>
-                <div class="artwork_slide" data-aos="fade-left" data-aos-easing="ease-in-sine">
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider1.jpeg" alt="">
+                <div class="slide_wrap">
+                    <div class="artwork_slide" data-aos="fade-left" data-aos-easing="ease-in-sine">
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider1.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>언제 가장 행복해?</h3>
+                                <p> 사진에 담기지못한 그 날 그 순간에 분위기와 감정, 느낌을 그림에 덧붙이면 기억은 추억이 되고 사소하지만 나를 가득 채우는 감정들이 살아난다.</p>
+                            </div>
                         </div>
-                        <div class="slide_text">
-                            <h3>언제 가장 행복해?</h3>
-                            <p> 사진에 담기지못한 그 날 그 순간에 분위기와 감정, 느낌을 그림에 덧붙이면 기억은 추억이 되고 사소하지만 나를 가득 채우는 감정들이 살아난다.</p>
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider2.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>여름이 시작되는 짙은 녹음</h3>
+                                <p> 짙은 녹음사이에 드리워진 그림자를 통해 일상의 따스함을 느낀다.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider2.jpeg" alt="">
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider3.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>커튼 사이</h3>
+                                <p>일상 속에는 많은 색감들이 있고 시간과 계절에 따라 색이 바뀐다. 그 안에서 많은 색감들에 영감을 받고 그 색들로 특별한 일상을 만들어나간다.</p>
+                            </div>
                         </div>
-                        <div class="slide_text">
-                            <h3>여름이 시작되는 짙은 녹음</h3>
-                            <p> 짙은 녹음사이에 드리워진 그림자를 통해 일상의 따스함을 느낀다.</p>
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider4.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>그날의 기억#2</h3>
+                                <p>내 작업을 일상을 그린 그림들이다. 나의 일상속에서 느낀 머물고 누르고자 하는 나의 마음, 감정, 기억을 색에 담아서 작업한다.</p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider3.jpeg" alt="">
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider5.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>LJ</h3>
+                                <p>LJ가 잠드는 순간이 가장 포근하다.</p>
+                            </div>
                         </div>
-                        <div class="slide_text">
-                            <h3>커튼 사이</h3>
-                            <p>일상 속에는 많은 색감들이 있고 시간과 계절에 따라 색이 바뀐다. 그 안에서 많은 색감들에 영감을 받고 그 색들로 특별한 일상을 만들어나간다.</p>
-                        </div>
-                    </div>
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider4.jpeg" alt="">
-                        </div>
-                        <div class="slide_text">
-                            <h3>그날의 기억#2</h3>
-                            <p>내 작업을 일상을 그린 그림들이다. 나의 일상속에서 느낀 머물고 누르고자 하는 나의 마음, 감정, 기억을 색에 담아서 작업한다.</p>
-                        </div>
-                    </div>
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider5.jpeg" alt="">
-                        </div>
-                        <div class="slide_text">
-                            <h3>LJ</h3>
-                            <p>LJ가 잠드는 순간이 가장 포근하다.</p>
-                        </div>
-                    </div>
-                    <div class="art_slide_box">
-                        <div class="slide_img">
-                            <img src="img/main/slider6.jpeg" alt="">
-                        </div>
-                        <div class="slide_text">
-                            <h3>밤마당2</h3>
-                            <p>밤 마당을 표현해보았다. 우거진 나무들과 나의 강아지가 있다.</p>
+                        <div class="art_slide_box">
+                            <div class="slide_img">
+                                <img src="img/main/slider6.jpeg" alt="">
+                            </div>
+                            <div class="slide_text">
+                                <h3>밤마당2</h3>
+                                <p>밤 마당을 표현해보았다. 우거진 나무들과 나의 강아지가 있다.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -196,37 +220,61 @@
         <div id="explanation">
             <div class="container">
                 <div class="more_imgbox" data-aos="fade-right" data-aos-easing="ease-in-sine">
-                    <img src="img/main/news_main.jpg" alt="">
+                    <img src="img/main/news_main.jpg" id="more_img">
                 </div>
                 <div class="news" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <div class="news_head">
-                        <h3>보도자료</h3>
-                        <h3>공지사항</h3>
+                        <h3 id="press_head">보도자료</h3>
+                        <h3 id="notice_head">공지사항</h3>
                     </div>
-                    <div class="news_content">
-                        <img src="img/main/news_right.jpg" alt="">
-                        <div class="news_box">
-                            <h2>베를린에서 바라본 자정의 여름밤..</h2>
-                            <p>"우리의 일상이 주는 안정감은 무엇보다 소중하고 일상 속에서 마주하는 순간들은 특별하지 않으면서도 특별합니다. 일상 속에서 마주하는 포근한 순간들은 가슴을
-                                따뜻하게 합니다.
-                                저는 그런 일상 속 특별한 순간들을 그려 사람들에게 일상 속 아름다움을 얘기하고 싶습니다. 또한, 제 작품이 감상자분들께 따뜻함과 편안함으로 다가가고, 제가
-                                그린 일상이 공감되기를 바라봅니다.
-                                -이인혜 작가 인터뷰中</p>
+                    <div id="press">
+                        <div class="news_content">
+                            <img src="img/main/news_right.jpg" alt="">
+                            <div class="news_box">
+                                <h2>베를린에서 바라본 자정의 여름밤..</h2>
+                                <p>"우리의 일상이 주는 안정감은 무엇보다 소중하고 일상 속에서 마주하는 순간들은 특별하지 않으면서도 특별합니다. 일상 속에서 마주하는 포근한 순간들은
+                                    가슴을
+                                    따뜻하게 합니다.
+                                    저는 그런 일상 속 특별한 순간들을 그려 사람들에게 일상 속 아름다움을 얘기하고 싶습니다. 또한, 제 작품이 감상자분들께 따뜻함과 편안함으로 다가가고,
+                                    제가
+                                    그린 일상이 공감되기를 바라봅니다.
+                                    -이인혜 작가 인터뷰中</p>
+                            </div>
+                        </div>
+                        <div class="news_content_bot">
+                            <img src="img/main/news_bot.jpg" alt="">
+                            <div class="news_box">
+                                <h2>노을빛처럼 무르익는.....</h2>
+                                <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다. 특히 고요해진 밤(Night) 풍경에서
+                                    편안함을
+                                    느끼는 작가는 친숙하게 봐오던 일상의 풍경들이 밤이 되면 달라지는 것을 보랏빛을 사용하여 몽롱함과 편안함을 표현하고자 하였다. 훤히 비치는 밝은 낮과
+                                    달리
+                                    밤(Night)에서만 느낄 수 있는 포근함이 근심과 걱정을 밤하늘 속에 묻어두길 바라며..</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="news_content_bot">
-                        <img src="img/main/news_bot.jpg" alt="">
-                        <div class="news_box">
-                            <h2>노을빛처럼 무르익는..... </h2>
-                            <p>자연에서 받은 영감, 과거의 기억, 포근하게 느꼈던 대상 및 풍경들을 작가의 언어로 캔버스 위에 표현하였다. 특히 고요해진 밤(Night) 풍경에서 편안함을
-                                느끼는 작가는 친숙하게 봐오던 일상의 풍경들이 밤이 되면 달라지는 것을 보랏빛을 사용하여 몽롱함과 편안함을 표현하고자 하였다. 훤히 비치는 밝은 낮과 달리
-                                밤(Night)에서만 느낄 수 있는 포근함이 근심과 걱정을 밤하늘 속에 묻어두길 바라며..</p>
+                    <div id="notice">
+                        <div class="news_content">
+                            <img src="img/main/logo.jpg" alt="">
+                            <div class="news_box">
+                                <h2>스페이스 이수 공지사항 게시판입니다.</h2>
+                                <p>스페이스 이수의 중요 공지사항이 입력되는 게시판으로 스페이스 이수의 중요 일정, 알림등의 정보를 확인하실 수 있습니다. 스페이스 이수는 언제나 고객께
+                                    만족을 드리기 위해 노력하겠습니다. 감사합니다.</p>
+                            </div>
+                        </div>
+                        <div class="news_content_bot">
+                            <img src="img/main/logo.jpg" alt="">
+                            <div class="news_box">
+                                <h2>스페이스 이수 홈페이지가 새로 오픈했습니다.</h2>
+                                <p>안녕하세요. 스페이스 이수 홈페이지가 새로 오픈했습니다. 고객께 더 정확하고 많은 정보를 제공하기 위해 홈페이지 구축을 시작으로 더욱 많은 노력을
+                                    기울이겠습니다. 많은 이용 부탁드리겠습니다. 감사합...</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <footer>
+        <div id="guide">
             <div class="container">
                 <div class="road" data-aos="fade-right" data-aos-easing="ease-in-sine">
                     <h2>SPACE ISU</h2><span>오시는 길</span>
@@ -237,21 +285,24 @@
                 <div class="map" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3173.039881531707!2d126.83160463185054!3d37.3178829816315!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b6f1b4de62e49%3A0x5153c99c56766ccf!2z65287J247Lu07ZOo7YSw7JWE7Yq47ZWZ7JuQ!5e0!3m2!1sko!2skr!4v1653024797616!5m2!1sko!2skr"
-                        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                        style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <div class="detail">
-                    <ul>
-                        <li>대표자 : 최명윤</li>
-                        <li>문의전화 : 010-2386-2257</li>
-                        <li>사업장 등록번호 : 111-11-11111</li>
-                    </ul>
-                    <p>경기도 안산시 단원구 고잔2길 45(고잔동) 코스모스프라지 6층</p>
-                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="detail">
+                <div class="container">
+                <ul>
+                    <li>대표자 : 최명윤</li>
+                    <li>문의전화 : 010-2386-2257</li>
+                    <li>사업장 등록번호 : 111-11-11111</li>
+                </ul>
+                <p>경기도 안산시 단원구 고잔2길 45(고잔동) 코스모스프라지 6층</p>
+            </div>
             </div>
         </footer>
     </div>
-
 </body>
 
 </html>
