--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <div id="wrap">
         <header>
             <div class="container">
@@ -68,28 +67,29 @@
         </header>
         <section>
             <div class="bg_img"></div>
-            <div class="overlay" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="650"></div>
-            <div class="container">
-                <div class="main_text" data-aos="fade-up" data-aos-easing="ease-in-sine">
-                    <table>
-                        <tr>
-                            <td>참여 작가</td>
-                            <td>박세진, 이혜인</td>
-                        </tr>
-                        <tr>
-                            <td>전시 기간</td>
-                            <td>2022.05.11 ~ 2022.07.31</td>
-                        </tr>
-                        <tr>
-                            <td>운영 시간</td>
-                            <td>수요일 - 일요일, 오후 1시 - 6시</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td>(매주 월, 화 및 공휴일 휴관)</td>
-                        </tr>
-                    </table>
-                    <a href="#">전시소개</a>
+            <div class="overlay" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="650">
+                <div class="container">
+                    <div class="main_text" data-aos="fade-up" data-aos-easing="ease-in-sine">
+                        <table>
+                            <tr>
+                                <td>참여 작가</td>
+                                <td>박세진, 이혜인</td>
+                            </tr>
+                            <tr>
+                                <td>전시 기간</td>
+                                <td>2022.05.11 ~ 2022.07.31</td>
+                            </tr>
+                            <tr>
+                                <td>운영 시간</td>
+                                <td>수요일 - 일요일, 오후 1시 - 6시</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>(매주 월, 화 및 공휴일 휴관)</td>
+                            </tr>
+                        </table>
+                        <a href="#">전시소개</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -131,7 +131,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="art_box2" data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="2000">
+                <div class="art_box2" data-aos="fade-up" data-aos-easing="ease-in-sine">
                     <img src="img/main/Berlin_ri.jpg" alt="">
                     <div class="Berlin_text_ri">
                         <h2>베를린 여름밤 자정</h2>
@@ -293,13 +293,13 @@
         <footer>
             <div class="detail">
                 <div class="container">
-                <ul>
-                    <li>대표자 : 최명윤</li>
-                    <li>문의전화 : 010-2386-2257</li>
-                    <li>사업장 등록번호 : 111-11-11111</li>
-                </ul>
-                <p>경기도 안산시 단원구 고잔2길 45(고잔동) 코스모스프라지 6층</p>
-            </div>
+                    <ul>
+                        <li>대표자 : 최명윤</li>
+                        <li>문의전화 : 010-2386-2257</li>
+                        <li>사업장 등록번호 : 111-11-11111</li>
+                    </ul>
+                    <p>경기도 안산시 단원구 고잔2길 45(고잔동) 코스모스프라지 6층</p>
+                </div>
             </div>
         </footer>
     </div>
