--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SPACE ISU</title>
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -21,31 +21,33 @@
         <header>
             <div class="container">
                 <div class="logo"><a href="">SPACE ISU</a></div>
-                <ul class="left menu">
-                    <li><a href="">관람·참여</a>
-                        <ul>
+                <div class="menu"><a href="#" onclick="left_menu()">MENU</a></div>
+                <div class="close"><a href="#" onclick="close()">X</a></div>
+                <ul class="left_menu">
+                    <li class="nav1">관람·참여
+                        <ul class="nav_1">
                             <li><a href="">전시해설</a></li>
                             <li><a href="">어린이 미술관</a></li>
                             <li><a href="">이벤트</a></li>
                             <li><a href="">레지던시</a></li>
                         </ul>
                     </li>
-                    <li><a href="">통합예약</a>
-                        <ul>
+                    <li class="nav2">통합예약
+                        <ul class="nav_2">
                             <li><a href="">예약하기</a></li>
                             <li><a href="">예약내역</a></li>
                             <li><a href="">예약취소</a></li>
                         </ul>
                     </li>
-                    <li><a href="">전시</a>
-                        <ul>
+                    <li class="nav3">전시
+                        <ul class="nav_3">
                             <li><a href="#">과거 전시</a></li>
                             <li><a href="#">현재 전시</a></li>
                             <li><a href="#">미래 전시</a></li>
                         </ul>
                     </li>
-                    <li><a href="">교육</a>
-                        <ul>
+                    <li class="nav4">교육
+                        <ul class="nav_4">
                             <li><a href="#">미술관교육소개</a></li>
                             <li><a href="#">청소년</a></li>
                             <li><a href="#">성인</a></li>
@@ -53,16 +55,14 @@
                             <li><a href="#">참여신청</a></li>
                         </ul>
                     </li>
-                    <li><a href="">미술연구</a>
-                        <ul>
+                    <li class="nav5">미술연구
+                        <ul class="nav_5">
                             <li><a href="#">아카이브</a></li>
                             <li><a href="#">연구</a></li>
                             <li><a href="#">발간자료</a></li>
                         </ul>
                     </li>
                 </ul>
-                <div class="menu"><a href="#" onclick="left_menu()">MENU</a></div>
-                <div class="close"><a href="#" onclick="close()">X</a></div>
             </div>
         </header>
         <section>
