--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
@@ -21,8 +21,7 @@
         <header>
             <div class="container">
                 <div class="logo"><a href="">SPACE ISU</a></div>
-                <div class="menu"><a href="#" onclick="left_menu()">MENU</a></div>
-                <div class="close"><a href="#" onclick="close()">X</a></div>
+                <div class="menu" onclick="left_menu()">MENU</div>
                 <ul class="left_menu">
                     <li class="nav1">관람·참여
                         <ul class="nav_1">
@@ -220,7 +219,7 @@
         <div id="explanation">
             <div class="container">
                 <div class="more_imgbox" data-aos="fade-right" data-aos-easing="ease-in-sine">
-                    <img src="img/main/news_main.jpg" id="more_img">
+                    <img src="img/main/news_main.jpg" id="more_img" alt="이인혜 작가 작품">
                 </div>
                 <div class="news" data-aos="fade-left" data-aos-easing="ease-in-sine">
                     <div class="news_head">
